# spinach-parser

./: Cargo.toml  README.md  pyproject.toml
src/: ast.rs  lib.rs  parser.rs  spinach.lalrpop  spinach.rs  spinashlang.pest
src/tests/: mod.rs
